@@ -56,8 +56,8 @@ class ExerciseControllerTest {
     void createExercise_Success() throws Exception {
         UUID userId = testUserId;
         UUID exerciseId = UUID.randomUUID();
-        ExerciseRequest req = new ExerciseRequest("Bench Press", "Hammer Strength", false, false, false, false, com.trainingapp.training.domain.ExerciseType.STRENGTH);
-        ExerciseResponse resp = new ExerciseResponse(exerciseId, "Bench Press", "Hammer Strength", false, false, false, false, com.trainingapp.training.domain.ExerciseType.STRENGTH, java.time.Instant.now(), List.of(), 5.0);
+        ExerciseRequest req = new ExerciseRequest("Bench Press", "Hammer Strength", false, false, false, false);
+        ExerciseResponse resp = new ExerciseResponse(exerciseId, "Bench Press", "Hammer Strength", false, false, false, false, java.time.Instant.now(), java.util.Collections.emptyList(), 5.0);
 
         Mockito.when(exerciseService.create(eq(userId), any())).thenReturn(resp);
 
@@ -74,7 +74,7 @@ class ExerciseControllerTest {
     @Test
     void searchExercises_Success() throws Exception {
         UUID userId = testUserId;
-        ExerciseResponse resp = new ExerciseResponse(UUID.randomUUID(), "Bench Press", null, false, false, false, false, com.trainingapp.training.domain.ExerciseType.STRENGTH, java.time.Instant.now(), java.util.Collections.emptyList(), 5.0);
+        ExerciseResponse resp = new ExerciseResponse(UUID.randomUUID(), "Bench Press", null, false, false, false, false, java.time.Instant.now(), java.util.Collections.emptyList(), 5.0);
 
         Mockito.when(exerciseService.search(eq(userId), eq("bench"))).thenReturn(List.of(resp));
 
